# proxmox.cli

./: .actrc  .flake8  .gitignore  ACT_SETUP_COMPLETE.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.2.md  RELEASE_v0.4.0.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
docs/: ACT.md  ACT_QUICKSTART.md  API.md  CI_FAILURE_BUILD_BACKEND.md  CI_FAILURE_IMPORT_SORTING.md  CONTAINER_TEMPLATES.md  CONTRIBUTING.md  IAM.md  IMAGE_COMMANDS.md  QUICKREF.md  RELEASE.md  STORAGE_CREATE.md  STORAGE_FEATURE_SUMMARY.md  STORAGE_QUICKREF.md  UNDERSTANDING_OLD_WORKFLOW_FAILURES.md  VM_CREATE_CLONE.md
examples/: example_config.yaml  example_usage.py
scripts/: bump_version.sh  publish.sh  release.sh  run-actions.sh
src/proxmox_cli/: __init__.py  cli.py  client.py  config.py
src/proxmox_cli/commands/: __init__.py  acl.py  backup.py  container.py  group.py  helpers.py  image.py  node.py  pool.py  role.py  storage.py  token.py  user.py  vm.py
src/proxmox_cli/utils/: __init__.py  helpers.py  output.py
tests/: __init__.py  test_cli.py  test_config.py  test_utils.py
